# AssetsLibrarySystem

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
docs/: architecture.md  avalonia_code_quality_plan.md  multi_vector_structured_description_plan.md  roadmap.md  schema_optimization_plan.md
scripts/: add_vector_angle_type_column.py  migrate_asset_description_vectors_to_multi_angle.py  migrate_to_surrogate_ids_and_multi_model_vectors.py  normalize_asset_schema.py  remove_legacy_description_store_paths.py  repair_empty_asset_hashes.py
src/avalonia/: AGENTS.md  (+3 more)
src/backend/: .env.example  README.md  pyproject.toml
src/backend/app/: __init__.py  cli.py  main.py
src/backend/app/api/routes/: assets.py  health.py  internal.py  libraries.py  model.py  search.py  tagging.py
src/backend/app/application/services/: asset_service.py  dashscope_model_client.py  library_service.py  media_preprocessor.py  model_response_parser.py  model_service.py  provider_resolver.py  search_service.py  tagging_service.py
src/backend/app/core/: config.py  container.py  dependencies.py  heartbeat.py  paths.py  prompt_config.py  provider_config.py
src/backend/app/domain/models/: asset.py  library.py  tag_record.py  tagging.py
src/backend/app/infrastructure/repositories/: asset_repository.py  json_library_repository.py  json_tag_repository.py
src/backend/app/infrastructure/search/: hnsw_index_manager.py  search_model_bundle.py  sqlite_vector_repository.py  structured_description.py  vector_search.py
src/backend/app/infrastructure/tagging/: __init__.py  asset_describer.py
src/backend/app/schemas/: asset.py  library.py  model.py  search.py  tagging.py
src/backend/configs/: prompts.yaml  providers.example.yaml  providers.yaml
src/backend/tests/: test_asset_flow.py  test_cli.py  test_model_service.py  test_paths.py  test_search_service.py  test_structured_description.py
(+135 files in other folders)
