[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assets-library-system-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for Assets Library System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[tool.setuptools]
packages = ["app"]
